--- a/scripts/test_geo_triangulate.ipynb
+++ b/scripts/test_geo_triangulate.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "official-relief",
+   "id": "personalized-blank",
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eleven-framing",
+   "id": "affecting-deposit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fifty-contributor",
+   "id": "statutory-engineering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "directed-velvet",
+   "id": "champion-poland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "geological-following",
+   "id": "designed-assistant",
    "metadata": {},
    "source": [
     "### groove shape"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rough-tonight",
+   "id": "interpreted-plenty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regional-parks",
+   "id": "spanish-aquatic",
    "metadata": {},
    "source": [
     "### workpiece geometry"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "electoral-flight",
+   "id": "protected-reconstruction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "favorite-effort",
+   "id": "cooperative-archives",
    "metadata": {},
    "source": [
     "## Test rasterization"
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "collaborative-shark",
+   "id": "biological-sample",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "respective-terry",
+   "id": "better-redhead",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sticky-holly",
+   "id": "educated-penalty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "systematic-material",
+   "id": "suburban-burlington",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "present-galaxy",
+   "id": "norwegian-reservoir",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "circular-willow",
+   "id": "sustained-peace",
    "metadata": {},
    "source": [
     "## k3d plot"
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "moderate-finder",
+   "id": "elder-waters",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,13 +196,16 @@
     "\n",
     "plot = k3d.plot()\n",
     "for ptc in ptc_list:\n",
-    "    plot += k3d.mesh(ptc.coordinates.flatten().astype(\"float32\"), ptc.triangles.flatten().astype(\"uint32\"))\n",
+    "    plot += k3d.mesh(\n",
+    "        ptc.coordinates.flatten().astype(\"float32\"),\n",
+    "        ptc.triangles.flatten().astype(\"uint32\"),\n",
+    "    )\n",
     "plot.display()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "classical-sherman",
+   "id": "atmospheric-editor",
    "metadata": {},
    "source": [
     "## ipygany plot"
@@ -211,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "official-separation",
+   "id": "appropriate-ukraine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,28 +222,23 @@
     "\n",
     "\n",
     "def ipygany_meshes(ptc_list):\n",
-    "    meshes = [PolyMesh(vertices=ptc.coordinates,triangle_indices=ptc.triangles) for ptc in ptc_list]\n",
+    "    meshes = [\n",
+    "        PolyMesh(vertices=ptc.coordinates, triangle_indices=ptc.triangles)\n",
+    "        for ptc in ptc_list\n",
+    "    ]\n",
     "    return meshes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "protected-nylon",
+   "id": "minor-writing",
    "metadata": {},
    "outputs": [],
    "source": [
     "meshes = ipygany_meshes(ptc_list)\n",
     "Scene(meshes)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "religious-brush",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
