Add 'PointCloud' class (#235)
* Add 'PointCloud' class

* handle missing triangles attribute

* add wx_shape validator, convert triangle_index to uint

* add dtype restrictions to schema

* add example to schema

* add schema to docs

* add PointCLoud.from_geometry_raster method

* update example notebook with k3d plot

* code format

* fix example text

* fix typo

Co-authored-by: Cagtay Fabry <43667554+CagtayFabry@users.noreply.github.com>

--- a/scripts/test_geo_triangulate.ipynb
+++ b/scripts/test_geo_triangulate.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polished-speaking",
+   "id": "personalized-blank",
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -16,7 +16,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "colonial-kazakhstan",
+   "id": "affecting-deposit",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "statutory-engineering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "binding-belief",
+   "id": "champion-poland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "skilled-preview",
+   "id": "designed-assistant",
    "metadata": {},
    "source": [
     "### groove shape"
@@ -54,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dutch-source",
+   "id": "interpreted-plenty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advance-suspension",
+   "id": "spanish-aquatic",
    "metadata": {},
    "source": [
     "### workpiece geometry"
@@ -80,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mineral-coral",
+   "id": "protected-reconstruction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unusual-scratch",
+   "id": "cooperative-archives",
    "metadata": {},
    "source": [
     "## Test rasterization"
@@ -113,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chubby-experiment",
+   "id": "biological-sample",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,71 +138,105 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aware-rehabilitation",
+   "id": "better-redhead",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def triangulate_geometry(geo_data):\n",
-    "    nx = geo_data.shape[2]  # Points per profile\n",
-    "    ny = geo_data.shape[0]  # number of profiles\n",
-    "\n",
-    "    data = np.swapaxes(geo_data, 1, 2).reshape((-1, 3))\n",
-    "    triangle_indices = np.empty((ny - 1, nx - 1, 2, 3), dtype=int)\n",
-    "    r = np.arange(nx * ny).reshape(ny, nx)\n",
-    "    triangle_indices[:, :, 0, 0] = r[:-1, :-1]\n",
-    "    triangle_indices[:, :, 1, 0] = r[:-1, 1:]\n",
-    "    triangle_indices[:, :, 0, 1] = r[:-1, 1:]\n",
-    "\n",
-    "    triangle_indices[:, :, 1, 1] = r[1:, 1:]\n",
-    "    triangle_indices[:, :, :, 2] = r[1:, :-1, None]\n",
-    "    triangle_indices.shape = (-1, 3)\n",
-    "\n",
-    "    return data, triangle_indices"
+    "data, triangle_indices = ut._triangulate_geometry(geos[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "domestic-permission",
+   "id": "educated-penalty",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data, triangle_indices = triangulate_geometry(geos[0])\n",
-    "print(data.shape)\n",
-    "print(triangle_indices)"
+    "geo.PointCloud(*ut._triangulate_geometry(geos[0]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "agreed-extraction",
+   "id": "suburban-burlington",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ptc_list = [geo.PointCloud.from_geometry_raster(g) for g in geos]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "norwegian-reservoir",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data, triangle_indices = ut._triangulate_geometry(geos[0])\n",
+    "print(ptc_list[0].coordinates.shape)\n",
+    "print(ptc_list[0].triangles.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sustained-peace",
+   "metadata": {},
+   "source": [
+    "## k3d plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "elder-waters",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import k3d\n",
+    "\n",
+    "plot = k3d.plot()\n",
+    "for ptc in ptc_list:\n",
+    "    plot += k3d.mesh(\n",
+    "        ptc.coordinates.flatten().astype(\"float32\"),\n",
+    "        ptc.triangles.flatten().astype(\"uint32\"),\n",
+    "    )\n",
+    "plot.display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "atmospheric-editor",
+   "metadata": {},
+   "source": [
+    "## ipygany plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "appropriate-ukraine",
    "metadata": {},
    "outputs": [],
    "source": [
     "from ipygany import Component, IsoColor, PolyMesh, Scene, Threshold, Warp\n",
     "\n",
     "\n",
-    "def ipygany_meshes(geo_list):\n",
-    "    meshes = []\n",
-    "    for geo_data in geo_list:\n",
-    "        data, triangle_indices = triangulate_geometry(geo_data)\n",
-    "        meshes.append(\n",
-    "            PolyMesh(\n",
-    "                vertices=data,\n",
-    "                triangle_indices=triangle_indices,\n",
-    "            )\n",
-    "        )\n",
+    "def ipygany_meshes(ptc_list):\n",
+    "    meshes = [\n",
+    "        PolyMesh(vertices=ptc.coordinates, triangle_indices=ptc.triangles)\n",
+    "        for ptc in ptc_list\n",
+    "    ]\n",
     "    return meshes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "varying-romance",
+   "id": "minor-writing",
    "metadata": {},
    "outputs": [],
    "source": [
-    "meshes = ipygany_meshes(geos)\n",
+    "meshes = ipygany_meshes(ptc_list)\n",
     "Scene(meshes)"
    ]
   }
