--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -182,20 +182,20 @@
     "_, (ax_0_01, ax_1_01) = vs.new_3d_figure_and_axes(num_subplots=2, width=800, height=400)\n",
     "\n",
     "# first plot\n",
-    "vs.plot_coordinate_systems([(lcs_root_in_root, \"r\", \"parent\"), \n",
-    "                            (lcs_flange_in_root, \"g\", \"flange\"), \n",
-    "                            (lcs_specimen_in_root, \"y\", \"specimen\"), \n",
-    "                            (lcs_torch_in_root, \"b\", \"torch\")],\n",
+    "vs.plot_coordinate_systems([(lcs_root_in_root, {\"color\":\"r\", \"label\":\"parent\"}), \n",
+    "                            (lcs_flange_in_root, {\"color\":\"g\", \"label\":\"flange\"}), \n",
+    "                            (lcs_specimen_in_root, {\"color\":\"y\", \"label\":\"specimen\"}), \n",
+    "                            (lcs_torch_in_root, {\"color\":\"b\", \"label\":\"torch\"})],\n",
     "                           axes=ax_0_01,\n",
     "                           limits=[-3, 3],\n",
     "                           title=\"root system\")\n",
     "\n",
     "\n",
     "# second plot\n",
-    "vs.plot_coordinate_systems([(lcs_root_in_torch, \"r\", \"parent\"), \n",
-    "                            (lcs_flange_in_torch, \"g\", \"flange\"), \n",
-    "                            (lcs_specimen_in_torch, \"y\", \"specimen\"), \n",
-    "                            (lcs_torch_in_torch, \"b\", \"torch\")],\n",
+    "vs.plot_coordinate_systems([(lcs_root_in_torch, {\"color\":\"r\", \"label\":\"parent\"}), \n",
+    "                            (lcs_flange_in_torch, {\"color\":\"g\", \"label\":\"flange\"}), \n",
+    "                            (lcs_specimen_in_torch, {\"color\":\"y\", \"label\":\"specimen\"}), \n",
+    "                            (lcs_torch_in_torch, {\"color\":\"b\", \"label\":\"torch\"})],\n",
     "                           axes=ax_1_01,\n",
     "                           limits=[-3, 3],\n",
     "                           title=\"torch system\")"
@@ -225,6 +225,7 @@
    "source": [
     "The plot function offers many parameters to adjust the resulting plot. One of them is to select a render backend. The default backend is matplotlib but for jupyter notebooks you can also use \"k3d\" which provides interactive plots. To test it, you can set the `backend` property of the previous command to `\"k3d\"` and rerun the cell. However, all time related controls will be disabled since the CSM only contains static coordinate systems. Consult the API documentation for further information on the plot function.\n",
     "\n",
+    "Furthermore, the plot function also visualizes spatial data that is attached to the CSM. How spatial data is added will be shown later in this tutorial.\n",
     "\n",
     "## Renaming existing coordinate systems\n",
     "Existing coordinate system nodes can be renamed using `CoordinateSystemManager.relabel`.\n",
@@ -459,18 +460,10 @@
     "# plot coordinate systems\n",
     "_, (ax_0_02, ax_1_02) = vs.new_3d_figure_and_axes(num_subplots=2, width=800, height=400)\n",
     "\n",
-    "# helper function\n",
-    "def plot_data(axes, data, color, label):\n",
-    "    axes.plot(data[:, 0], data[:, 1], data[:, 2], \"x\", color=color, label=label)\n",
-    "\n",
     "# first plot\n",
-    "plot_data(ax_0_02, specimen_geometry_in_root, \"c\", \"specimen geometry\")\n",
-    "plot_data(ax_0_02, sensor_positions_in_root, \"k\", \"sensor positions\")\n",
     "csm.plot_coordinate_systems(title=\"root system\", limits=[-3,3], axes=ax_0_02)\n",
     "\n",
     "# second plot\n",
-    "plot_data(ax_1_02, specimen_geometry_in_torch, \"c\", \"specimen geometry\")\n",
-    "plot_data(ax_1_02, sensor_positions_in_torch, \"k\", \"sensor positions\")\n",
     "csm.plot_coordinate_systems(reference_system=\"torch\", title=\"torch system\", limits=[-3,3], axes=ax_1_02)"
    ]
   },
@@ -606,25 +599,25 @@
     "_, (ax_0_tdp, ax_1_tdp, ax_2_tdp) = vs.new_3d_figure_and_axes(num_subplots=3, width=1000, height=400)\n",
     "\n",
     "\n",
-    "vs.plot_coordinate_systems([(lcs_parent_in_root_default, \"g\", \"parent\"), \n",
-    "                            (lcs_child_in_root_default, \"y\", \"child\"), \n",
-    "                            (lcs_childchild_in_root_default, \"b\", \"child child\") ],\n",
+    "vs.plot_coordinate_systems([(lcs_parent_in_root_default, {\"color\":\"g\", \"label\":\"parent\"}), \n",
+    "                            (lcs_child_in_root_default, {\"color\":\"y\", \"label\":\"child\"}), \n",
+    "                            (lcs_childchild_in_root_default, {\"color\":\"b\", \"label\":\"child child\"}) ],\n",
     "                           axes=ax_0_tdp,\n",
     "                           title=\"default\",\n",
     "                           limits=[-3, 3]\n",
     "                          )\n",
     "\n",
-    "vs.plot_coordinate_systems([(lcs_parent_in_root_time, \"g\", \"parent\"), \n",
-    "                            (lcs_child_in_root_time, \"y\", \"child\"), \n",
-    "                            (lcs_childchild_in_root_time, \"b\", \"child child\") ],\n",
+    "vs.plot_coordinate_systems([(lcs_parent_in_root_time, {\"color\":\"g\", \"label\":\"parent\"}), \n",
+    "                            (lcs_child_in_root_time, {\"color\":\"y\", \"label\":\"child\"}), \n",
+    "                            (lcs_childchild_in_root_time, {\"color\":\"b\", \"label\":\"child child\"}) ],\n",
     "                           axes=ax_1_tdp,\n",
     "                           title=\"specific times\",\n",
     "                           limits=[-3, 3]\n",
     "                          )\n",
     "\n",
-    "vs.plot_coordinate_systems([(lcs_parent_in_root_ref, \"g\", \"parent\"), \n",
-    "                            (lcs_child_in_root_ref, \"y\", \"child\"), \n",
-    "                            (lcs_childchild_in_root_ref, \"b\", \"child child\") ],\n",
+    "vs.plot_coordinate_systems([(lcs_parent_in_root_ref, {\"color\":\"g\", \"label\":\"parent\"}), \n",
+    "                            (lcs_child_in_root_ref, {\"color\":\"y\", \"label\":\"child\"}), \n",
+    "                            (lcs_childchild_in_root_ref, {\"color\":\"b\", \"label\":\"child child\"}) ],\n",
     "                           axes=ax_2_tdp,\n",
     "                           title= '\"parent\" as time reference',\n",
     "                           limits=[-3, 3]\n",
