--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -461,10 +461,10 @@
     "_, (ax_0_02, ax_1_02) = vs.new_3d_figure_and_axes(num_subplots=2, width=800, height=400)\n",
     "\n",
     "# first plot\n",
-    "csm.plot_coordinate_systems(title=\"root system\", limits=[-3,3], axes=ax_0_02)\n",
+    "csm.plot_coordinate_systems(title=\"root system\", limits=[(-3,3)], axes=ax_0_02)\n",
     "\n",
     "# second plot\n",
-    "csm.plot_coordinate_systems(reference_system=\"torch\", title=\"torch system\", limits=[-3,3], axes=ax_1_02)"
+    "csm.plot_coordinate_systems(reference_system=\"torch\", title=\"torch system\", limits=[(-3,3)], axes=ax_1_02)"
    ]
   },
   {
