--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -578,7 +578,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    csm.plot_coordinate_systems(backend=\"k3d\", limits=[-5,150], coordinate_systems=[\"base\", \"workpiece\", \"tcp_wire_sine2\"], show_vectors=False, show_traces=True, show_labels=False, show_origins=True)\n",
+    "    csm.plot_coordinate_systems(backend=\"k3d\", limits=[[-5,150]], coordinate_systems=[\"base\", \"workpiece\", \"tcp_wire_sine2\"], show_vectors=False, show_traces=True, show_labels=False, show_origins=True)\n",
     "except:\n",
     "    pass"
    ]
