Rename another function

--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -399,21 +399,21 @@
     "    cr_z = coordinates_cr[2]\n",
     "\n",
     "    ax_iadd_0.clear()\n",
-    "    vs.plot_coordinate_system(lcs_ref, ax_iadd_0, color=\"r\", label=\"reference\")\n",
-    "    vs.plot_coordinate_system(lcs_parent, ax_iadd_0, color=\"g\", label=\"parent\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_ref, ax_iadd_0, color=\"r\", label=\"reference\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_parent, ax_iadd_0, color=\"g\", label=\"parent\")\n",
     "    ax_iadd_0.plot([0, s1_x], [0, s1_y], [0, s1_z], \"c--\", label=\"ref -> parent\")\n",
     "    setup_axes(ax_iadd_0, axes_lim, \"'parent' in reference coordinate system\")\n",
     "\n",
     "    ax_iadd_1.clear()\n",
-    "    vs.plot_coordinate_system(lcs_ref, ax_iadd_1, color=\"g\", label=\"parent\")\n",
-    "    vs.plot_coordinate_system(lcs_child, ax_iadd_1, color=\"y\", label=\"child\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_ref, ax_iadd_1, color=\"g\", label=\"parent\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_child, ax_iadd_1, color=\"y\", label=\"child\")\n",
     "    ax_iadd_1.plot([0, s2_x], [0, s2_y], [0, s2_z], \"m--\", label=\"parent -> child\")\n",
     "    setup_axes(ax_iadd_1, axes_lim, \"'child' in 'parent' coordinate system\")\n",
     "\n",
     "    ax_iadd_2.clear()\n",
-    "    vs.plot_coordinate_system(lcs_ref, ax_iadd_2, color=\"r\", label=\"reference\")\n",
-    "    vs.plot_coordinate_system(lcs_parent, ax_iadd_2, color=\"g\", label=\"parent\")\n",
-    "    vs.plot_coordinate_system(lcs_child_ref, ax_iadd_2, color=\"y\", label=\"parent + child\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_ref, ax_iadd_2, color=\"r\", label=\"reference\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_parent, ax_iadd_2, color=\"g\", label=\"parent\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_child_ref, ax_iadd_2, color=\"y\", label=\"parent + child\")\n",
     "    ax_iadd_2.plot([0, s1_x], [0, s1_y], [0, s1_z], \"c--\", label=\"ref -> parent\")\n",
     "    ax_iadd_2.plot([s1_x, cr_x], [s1_y, cr_y], [s1_z, cr_z], \"m--\", label=\"parent -> child\")\n",
     "    setup_axes(ax_iadd_2, axes_lim * 2, \"'parent' and 'child' in reference coordinate system\")\n",
@@ -453,21 +453,21 @@
     "    sys21_z = sys21_o[2]\n",
     "\n",
     "    ax_isub_1.clear()\n",
-    "    vs.plot_coordinate_system(lcs_ref, ax_isub_1, color=\"g\", label=\"system 1 (reference)\")\n",
-    "    vs.plot_coordinate_system(lcs_sys2_in_sys1, ax_isub_1, color=\"b\", label=\"system 2 - system 1\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_ref, ax_isub_1, color=\"g\", label=\"system 1 (reference)\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_sys2_in_sys1, ax_isub_1, color=\"b\", label=\"system 2 - system 1\")\n",
     "    ax_isub_1.plot([0, sys21_x], [0, sys21_y], [0, sys21_z], \"y--\", label=\"system 1 -> system 2\")\n",
     "    setup_axes(ax_isub_1, axes_lim * 2, \"'system 2' in 'system 1'\")\n",
     "\n",
     "    ax_isub_0.clear()\n",
-    "    vs.plot_coordinate_system(lcs_ref, ax_isub_0, color=\"b\", label=\"system 2 (reference)\")\n",
-    "    vs.plot_coordinate_system(lcs_sys1_in_sys2, ax_isub_0, color=\"g\", label=\"system_1 - system 2\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_ref, ax_isub_0, color=\"b\", label=\"system 2 (reference)\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_sys1_in_sys2, ax_isub_0, color=\"g\", label=\"system_1 - system 2\")\n",
     "    ax_isub_0.plot([0, sys12_x], [0, sys12_y], [0, sys12_z], \"y--\", label=\"system 1 -> system 2\")\n",
     "    setup_axes(ax_isub_0, axes_lim * 2, \"'system 1' in 'system 2'\")\n",
     "\n",
     "    ax_isub_2.clear()\n",
-    "    vs.plot_coordinate_system(lcs_ref, ax_isub_2, color=\"r\", label=\"reference\")\n",
-    "    vs.plot_coordinate_system(lcs_sys1_in_ref, ax_isub_2, color=\"g\", label=\"system 1\")\n",
-    "    vs.plot_coordinate_system(lcs_sys2_in_ref, ax_isub_2, color=\"b\", label=\"system 2\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_ref, ax_isub_2, color=\"r\", label=\"reference\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_sys1_in_ref, ax_isub_2, color=\"g\", label=\"system 1\")\n",
+    "    vs.draw_coordinate_system_matplotlib(lcs_sys2_in_ref, ax_isub_2, color=\"b\", label=\"system 2\")\n",
     "    ax_isub_2.plot([0, s1_x], [0, s1_y], [0, s1_z], \"g--\", label=\"ref -> system 1\")\n",
     "    ax_isub_2.plot([0, s2_x], [0, s2_y], [0, s2_z], \"b--\", label=\"ref -> system 2\")\n",
     "    ax_isub_2.plot([s1_x, s2_x], [s1_y, s2_y], [s1_z, s2_z], \"y--\", label=\"system 1 <-> system 2\")\n",
