--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vs.plot([(lcs_ref, {\"color\":\"r\", \"label\":\"reference_system\"}), \n",
+    "vs.plot_coordinate_systems([(lcs_ref, {\"color\":\"r\", \"label\":\"reference_system\"}), \n",
     "                            (lcs_01, {\"color\":\"g\", \"label\":\"system 1\"}), \n",
     "                            (lcs_02, {\"color\":\"b\", \"label\":\"system 2\"}) ])"
    ]
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vs.plot([(lcs_ref, {\"color\":\"r\", \"label\":\"reference_system\"}), \n",
+    "vs.plot_coordinate_systems([(lcs_ref, {\"color\":\"r\", \"label\":\"reference_system\"}), \n",
     "                            (lcs_03, {\"color\":\"g\", \"label\":\"system 3\"}), \n",
     "                            (lcs_04, {\"color\":\"b\", \"label\":\"system 4\"}) ])"
    ]
@@ -202,7 +202,7 @@
    "outputs": [],
    "source": [
     "# create 3d plot\n",
-    "vs.plot([(lcs_ref, {\"color\":\"r\", \"label\":\"reference_system\"}), \n",
+    "vs.plot_coordinate_systems([(lcs_ref, {\"color\":\"r\", \"label\":\"reference_system\"}), \n",
     "                            (lcs_05, {\"color\":\"g\", \"label\":\"system 5\"}), \n",
     "                            (lcs_06, {\"color\":\"b\", \"label\":\"system 6\"}) ])"
    ]
@@ -521,17 +521,17 @@
     "_, (ax_invert_0, ax_invert_1) = vs.new_3d_figure_and_axes(num_subplots=2, width=1000)\n",
     "\n",
     "# left plot\n",
-    "vs.plot([(lcs_ref, {\"color\":\"r\", \"label\":\"parent\"}), \n",
+    "vs.plot_coordinate_systems([(lcs_ref, {\"color\":\"r\", \"label\":\"parent\"}), \n",
     "                            (lcs_child_in_parent, {\"color\":\"g\", \"label\":\"child\"})],\n",
     "                           axes=ax_invert_0,\n",
-    "                           limits=[-3, 3],\n",
+    "                           limits=(-3, 3),\n",
     "                           title=\"child in parent\")\n",
     "                        \n",
     "# right plot\n",
-    "vs.plot([(lcs_parent_in_child, {\"color\":\"r\", \"label\":\"parent\"}), \n",
+    "vs.plot_coordinate_systems([(lcs_parent_in_child, {\"color\":\"r\", \"label\":\"parent\"}), \n",
     "                            (lcs_ref, {\"color\":\"g\", \"label\":\"child\"})],\n",
     "                           axes=ax_invert_1,\n",
-    "                           limits=[-3, 3],\n",
+    "                           limits=(-3, 3),\n",
     "                           title=\"parent in child\")"
    ]
   },
@@ -630,12 +630,12 @@
     "_, axes_array = vs.new_3d_figure_and_axes(num_subplots=2, width=1000)\n",
     "\n",
     "for i, ax in enumerate(axes_array):\n",
-    "    vs.plot([(lcs_ref, {\"color\":\"r\", \"label\":\"reference\"}),\n",
+    "    vs.plot_coordinate_systems([(lcs_ref, {\"color\":\"r\", \"label\":\"reference\"}),\n",
     "                                (lcs_mov_in_ref, {\"color\":\"g\", \"label\":\"lcs_mov_in_ref\"}),\n",
     "                                (lcs_rot_in_ref, {\"color\":\"b\", \"label\":\"lcs_rot_in_ref\"}),\n",
     "                                (lcs_movrot_in_ref, {\"color\":\"c\", \"label\":\"lcs_movrot_in_ref\"})],\n",
     "                               axes=ax,\n",
-    "                               limits=[-3, 3],\n",
+    "                               limits=(-3, 3),\n",
     "                               title=f\"timestep {i}\",\n",
     "                               time_index=i)\n"
    ]
@@ -687,11 +687,11 @@
     "_, (ax_0_interp, ax_1_interp) = vs.new_3d_figure_and_axes(num_subplots=2, width=1000)\n",
     "\n",
     "# original systems\n",
-    "vs.plot([(lcs_ref, {\"color\":\"r\", \"label\":\"reference\"}),\n",
+    "vs.plot_coordinate_systems([(lcs_ref, {\"color\":\"r\", \"label\":\"reference\"}),\n",
     "                            (lcs_tdp_in_ref, {\"color\":\"g\", \"label\":\"2010-02-01\", \"time_index\":0}),\n",
     "                            (lcs_tdp_in_ref, {\"color\":\"b\", \"label\":\"2010-02-07\", \"time_index\":1})],\n",
     "                           axes=ax_0_interp,\n",
-    "                           limits=[-3, 3],\n",
+    "                           limits=(-3, 3),\n",
     "                           title=\"original system\")\n",
     "\n",
     "\n",
@@ -703,9 +703,9 @@
     "]\n",
     "plot_data = [(lcs_ref, {\"color\":\"r\", \"label\":\"reference\"}), *plot_data]\n",
     "\n",
-    "vs.plot(plot_data,\n",
+    "vs.plot_coordinate_systems(plot_data,\n",
     "                           axes=ax_1_interp,\n",
-    "                           limits=[-3, 3],\n",
+    "                           limits=(-3, 3),\n",
     "                           title=\"interpolated system\")"
    ]
   },
@@ -780,19 +780,19 @@
     "_, (ax_0_trans, ax_1_trans) = vs.new_3d_figure_and_axes(num_subplots=2, width=1000)\n",
     "\n",
     "# first plot\n",
-    "vs.plot([(lcs_ref, {\"color\":\"r\", \"label\":\"original system\"}),\n",
+    "vs.plot_coordinate_systems([(lcs_ref, {\"color\":\"r\", \"label\":\"original system\"}),\n",
     "                            (lcs_target_in_ref, {\"color\":\"g\", \"label\":\"target system\"})],\n",
     "                           axes=ax_0_trans,\n",
-    "                           limits=[-3, 3],\n",
+    "                           limits=(-3, 3),\n",
     "                           title=\"Data in original system\")\n",
     "ax_0_trans.plot(points_in_ref[0], points_in_ref[1], points_in_ref[2])\n",
     "\n",
     "\n",
     "# second plot\n",
-    "vs.plot([(lcs_ref_in_target, {\"color\":\"r\", \"label\":\"original system\"}),\n",
+    "vs.plot_coordinate_systems([(lcs_ref_in_target, {\"color\":\"r\", \"label\":\"original system\"}),\n",
     "                            (lcs_ref, {\"color\":\"g\", \"label\":\"target system\"})],\n",
     "                           axes=ax_1_trans,\n",
-    "                           limits=[-3, 3],\n",
+    "                           limits=(-3, 3),\n",
     "                           title=\"Data in original system\")\n",
     "ax_1_trans.plot(points_in_target[0], points_in_target[1], points_in_target[2])"
    ]
@@ -847,11 +847,11 @@
     "_, ax_dsx = vs.new_3d_figure_and_axes()\n",
     "\n",
     "# first timestep\n",
-    "vs.plot([(lcs_ref, {\"color\":\"r\", \"label\":\"reference\"}),\n",
+    "vs.plot_coordinate_systems([(lcs_ref, {\"color\":\"r\", \"label\":\"reference\"}),\n",
     "                            (lcs_xr, {\"color\":\"g\", \"label\":str(lcs_xr.time[0]), \"time_index\":0}),\n",
     "                            (lcs_xr, {\"color\":\"b\", \"label\":str(lcs_xr.time[1]), \"time_index\":1})],\n",
     "                           axes=ax_dsx,\n",
-    "                           limits=[-3, 3])"
+    "                           limits=(-3, 3))"
    ]
   },
   {
