--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -182,22 +182,22 @@
     "_, (ax_0_01, ax_1_01) = vs.new_3d_figure_and_axes(num_subplots=2, width=800, height=400)\n",
     "\n",
     "# first plot\n",
-    "vs.plot([(lcs_root_in_root, {\"color\":\"r\", \"label\":\"parent\"}), \n",
+    "vs.plot_coordinate_systems([(lcs_root_in_root, {\"color\":\"r\", \"label\":\"parent\"}), \n",
     "                            (lcs_flange_in_root, {\"color\":\"g\", \"label\":\"flange\"}), \n",
     "                            (lcs_specimen_in_root, {\"color\":\"y\", \"label\":\"specimen\"}), \n",
     "                            (lcs_torch_in_root, {\"color\":\"b\", \"label\":\"torch\"})],\n",
     "                           axes=ax_0_01,\n",
-    "                           limits=[-3, 3],\n",
+    "                           limits=(-3, 3),\n",
     "                           title=\"root system\")\n",
     "\n",
     "\n",
     "# second plot\n",
-    "vs.plot([(lcs_root_in_torch, {\"color\":\"r\", \"label\":\"parent\"}), \n",
+    "vs.plot_coordinate_systems([(lcs_root_in_torch, {\"color\":\"r\", \"label\":\"parent\"}), \n",
     "                            (lcs_flange_in_torch, {\"color\":\"g\", \"label\":\"flange\"}), \n",
     "                            (lcs_specimen_in_torch, {\"color\":\"y\", \"label\":\"specimen\"}), \n",
     "                            (lcs_torch_in_torch, {\"color\":\"b\", \"label\":\"torch\"})],\n",
     "                           axes=ax_1_01,\n",
-    "                           limits=[-3, 3],\n",
+    "                           limits=(-3, 3),\n",
     "                           title=\"torch system\")"
    ]
   },
@@ -461,10 +461,10 @@
     "_, (ax_0_02, ax_1_02) = vs.new_3d_figure_and_axes(num_subplots=2, width=800, height=400)\n",
     "\n",
     "# first plot\n",
-    "csm.plot(title=\"root system\", limits=[(-3,3)], axes=ax_0_02)\n",
+    "csm.plot(title=\"root system\", limits=(-3,3), axes=ax_0_02)\n",
     "\n",
     "# second plot\n",
-    "csm.plot(reference_system=\"torch\", title=\"torch system\", limits=[(-3,3)], axes=ax_1_02)"
+    "csm.plot(reference_system=\"torch\", title=\"torch system\", limits=(-3,3), axes=ax_1_02)"
    ]
   },
   {
@@ -599,28 +599,28 @@
     "_, (ax_0_tdp, ax_1_tdp, ax_2_tdp) = vs.new_3d_figure_and_axes(num_subplots=3, width=1000, height=400)\n",
     "\n",
     "\n",
-    "vs.plot([(lcs_parent_in_root_default, {\"color\":\"g\", \"label\":\"parent\"}), \n",
+    "vs.plot_coordinate_systems([(lcs_parent_in_root_default, {\"color\":\"g\", \"label\":\"parent\"}), \n",
     "                            (lcs_child_in_root_default, {\"color\":\"y\", \"label\":\"child\"}), \n",
     "                            (lcs_childchild_in_root_default, {\"color\":\"b\", \"label\":\"child child\"}) ],\n",
     "                           axes=ax_0_tdp,\n",
     "                           title=\"default\",\n",
-    "                           limits=[-3, 3]\n",
+    "                           limits=(-3, 3)\n",
     "                          )\n",
     "\n",
-    "vs.plot([(lcs_parent_in_root_time, {\"color\":\"g\", \"label\":\"parent\"}), \n",
+    "vs.plot_coordinate_systems([(lcs_parent_in_root_time, {\"color\":\"g\", \"label\":\"parent\"}), \n",
     "                            (lcs_child_in_root_time, {\"color\":\"y\", \"label\":\"child\"}), \n",
     "                            (lcs_childchild_in_root_time, {\"color\":\"b\", \"label\":\"child child\"}) ],\n",
     "                           axes=ax_1_tdp,\n",
     "                           title=\"specific times\",\n",
-    "                           limits=[-3, 3]\n",
+    "                           limits=(-3, 3)\n",
     "                          )\n",
     "\n",
-    "vs.plot([(lcs_parent_in_root_ref, {\"color\":\"g\", \"label\":\"parent\"}), \n",
+    "vs.plot_coordinate_systems([(lcs_parent_in_root_ref, {\"color\":\"g\", \"label\":\"parent\"}), \n",
     "                            (lcs_child_in_root_ref, {\"color\":\"y\", \"label\":\"child\"}), \n",
     "                            (lcs_childchild_in_root_ref, {\"color\":\"b\", \"label\":\"child child\"}) ],\n",
     "                           axes=ax_2_tdp,\n",
     "                           title= '\"parent\" as time reference',\n",
-    "                           limits=[-3, 3]\n",
+    "                           limits=(-3, 3)\n",
     "                          )\n"
    ]
   },
