--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -559,6 +559,29 @@
     "\n",
     "ax_setup(ax)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
+   "source": [
+    "## K3D Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    csm.plot(backend=\"k3d\", limits=[[-5,150]], coordinate_systems=[\"base\", \"workpiece\", \"tcp_wire_sine2\"], show_vectors=False, show_traces=True, show_labels=False, show_origins=True)\n",
+    "except:\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
