Add 'from_geometry' method to 'SpatialData'

--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -466,6 +466,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = np.array(geometry.rasterize(\n",
+    "    profile_raster_width=profile_raster_width, trace_raster_width=trace_raster_width, stack=False\n",
+    "))\n",
+    "test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spatial_data_geo = geo.SpatialData.from_geometry(geometry, profile_raster_width=profile_raster_width, trace_raster_width=trace_raster_width)\n",
+    "csm.assign_data(spatial_data_geo, \"specimen\" ,\"workpiece\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csm.plot(backend=\"mpl\", limits=[(0, 300), (-4, 4), (0, 12)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
