--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -207,7 +207,8 @@
     "    ax.legend()\n",
     "    ax.set_xlabel(\"x / mm\")\n",
     "    ax.set_ylabel(\"y / mm\")\n",
-    "    ax.set_zlabel(\"z / mm\")"
+    "    ax.set_zlabel(\"z / mm\")\n",
+    "    ax.view_init(30, -5)"
    ]
   },
   {
@@ -471,18 +472,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = np.array(geometry.rasterize(\n",
-    "    profile_raster_width=profile_raster_width, trace_raster_width=trace_raster_width, stack=False\n",
-    "))\n",
-    "test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "spatial_data_geo = geo.SpatialData.from_geometry(geometry, profile_raster_width=profile_raster_width, trace_raster_width=trace_raster_width)\n",
     "csm.assign_data(spatial_data_geo, \"specimen\" ,\"workpiece\")"
    ]
@@ -493,7 +482,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csm.plot(backend=\"mpl\", limits=[(0, 300), (-4, 4), (0, 12)])"
+    "ax = csm.plot(coordinate_systems=[\"tcp_contact\", \"tcp_wire\"], \n",
+    "         limits=[(0, 300), (-5, 5), (0, 12)], \n",
+    "         colors={\"tcp_contact\": (255, 0, 0), \"tcp_wire\": (0, 150, 0), \"specimen\": (0, 0, 255)},\n",
+    "         show_vectors=False,\n",
+    "         show_wireframe=True,\n",
+    "        )\n",
+    "ax_setup(ax)"
    ]
   },
   {
