--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -233,6 +233,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = geometry.plot(profile_raster_width, trace_raster_width, color = (0, 0, 255), show_wireframe = True, label=\"groove\")\n",
+    "ax_setup(ax)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
